--- a/index.html
+++ b/index.html
@@ -38,26 +38,26 @@
         <article class="container row">
             <form action="#">
                 <div class="container row ">
-                    <div class="col-md-3">
+                    <div class="col-lg-3">
                         <label for="nev"></label>
                         <input type="text" id="nev" id="nev" placeholder="Név">
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-lg-3">
                         <label for="kor"></label>
                         <input type="text" id="kor" id="kor" placeholder="pl: >12, =12, 12">
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-lg-3">
                         <label for="fajta"></label>
                         <input type="text" id="fajta" id="fajta" placeholder="fajta">
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-lg-3">
                         <input type="submit" value="Új elem">
                     </div>
-
                 </div>
-
-
             </form>
+
+            <section class="tablazat"></section>
+            
         </article>
         <footer>Dreilinger Vanessza Maja</footer>
     </main>
