táblázat kész keresés még nem aktív

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <input type="text" id="fajta" id="fajta" placeholder="fajta">
                     </div>
                     <div class="col-lg-3">
-                        <input type="submit" value="Új elem">
+                        <input type="submit" class="btn btn-primary" value="Új elem">
                     </div>
                 </div>
             </form>
