univerzális tábázatfeltöltés, kulcsLista létrejött

--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
             <form action="#">
                 <div class="container row ">
                     <div class="col-lg-3">
-                        <label for="nev"></label>
-                        <input type="text" id="nev" id="nev" placeholder="Név">
+                        <label for="inev"></label>
+                        <input type="text" id="inev" name="nev" placeholder="Név">
                     </div>
                     <div class="col-lg-3">
-                        <label for="kor"></label>
-                        <input type="text" id="kor" id="kor" placeholder="pl: >12, =12, 12">
+                        <label for="ikor"></label>
+                        <input type="text" id="ikor" name="kor" placeholder="pl: >12, =12, <12">
                     </div>
                     <div class="col-lg-3">
-                        <label for="fajta"></label>
-                        <input type="text" id="fajta" id="fajta" placeholder="fajta">
+                        <label for="ifajta"></label>
+                        <input type="text" id="ifajta" name="fajta" placeholder="fajta">
                     </div>
                     <div class="col-lg-3">
                         <input type="submit" class="btn btn-primary" value="Új elem">
