--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                   <a class="nav-link active" href="#">Kutyák adatainak megtekintése</a>
                 </li>
                <li class="nav-item">
-                  <a class="nav-link" href="#">Admin felület</a>
+                  <a class="nav-link" href="index.html">Admin felület</a>
                 </li>
         
               </ul>
