--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="container-fluid">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link active" href="#">Kutyák adatainak megtekintése</a>
+                  <a class="nav-link active" href="publikOldal.html">Kutyák adatainak megtekintése</a>
                 </li>
                <li class="nav-item">
                   <a class="nav-link" href="index.html">Admin felület</a>
