rendezett JS mappa

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="stiluslap.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <!--A többi fájlt csatoljuk a script js-be-->
-    <script src="script.js" type="module"></script>
+    <script src="JS/admin/script.js" type="module"></script>
     <title>Dreilinger Vanessza Maja</title>
 </head>
 
