--- a/publikOldal.html
+++ b/publikOldal.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="stiluslap.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
         <!--A többi fájlt csatoljuk a script js-be-->
-        <script src="script.js" type="module"></script>
+        <script src="JS/public/publicScript.js" type="module"></script>
         <title>Dreilinger Vanessza Maja</title>
     </head>
 <body>
@@ -33,6 +33,11 @@
           </nav>
 
         <article>
+          <div class="tarolo">
+            
+          </div>
+          <img src="" alt="">
+
             
         </article>
 
