szerkesztes gomb még nem, de otlet van

--- a/index.html
+++ b/index.html
@@ -56,6 +56,14 @@
                 </div>
             </form>
 
+            <section class="modositas">
+                <form action="#">
+                    <div class="col-lg-3">
+
+                    </div>
+                </form>
+            </section>
+
             <section class="tablazat"></section>
             
         </article>
