uj elem hozzáadása működik, de nem rendezi

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
             
             <div class="ujElemLetrehoz container mt-3 elrejt">                
-                    <form action="#" class="">
+                    <form action="#" class="ujArray">
                       <div class="mb-3 mt-3">
                         <label for="nev">nev:</label>
                         <input type="nev" class="form-control" id="nev" placeholder="nev" name="nev">
