--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <input type="text" class="form-control" id="fajta" placeholder="fajta" name="fajta">
                       </div>
                       
-                      <button type="submit" class="btn btn-primary submit">Beküldt</button>
+                      <button type="button" class="btn btn-primary submit">Beküldt</button>
                     </form>
                   </div>
 
