--- a/publikOldal.html
+++ b/publikOldal.html
@@ -42,7 +42,7 @@
     <aside>
       <!-- The Modal -->
       <div class="modal fade" id="myModal">
-        <div class="modal-dialog">
+        <div class="modal-dialog modal-lg">
           <div class="modal-content">                    
 
           </div>
