modal button jól írja ki az adatokat

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     </div>
                     <div class="col-lg-3">
                         <label for="gomb"></label>
-                        <input type="submit" id="gomb" class="form-control btn btn-primary ujElemHoz" value="Új elem">
+                        <input type="button" id="gomb" class="form-control btn btn-primary ujElemHoz" value="Új elem">
                     </div>
                 </div>
             </form>
@@ -76,7 +76,7 @@
                         <input type="text" class="form-control" id="fajta" placeholder="fajta" name="fajta">
                       </div>
                       
-                      <button type="button" class="btn btn-primary submit">Beküldt</button>
+                      <button type="submit" class="btn btn-primary submit">Beküldt</button>
                     </form>
                   </div>
 
