--- a/publikOldal.html
+++ b/publikOldal.html
@@ -37,13 +37,13 @@
       </div>
     </nav>
 
-    <article>     
+    <article>
     </article>
     <aside>
       <!-- The Modal -->
-      <div class="modal fade" id="myModal">
+      <div class="modal fade modal-dialog modal-dialog-centered" id="myModal">
         <div class="modal-dialog modal-lg">
-          <div class="modal-content">                    
+          <div class="modal-content">
 
           </div>
         </div>
