--- a/index.html
+++ b/index.html
@@ -39,17 +39,26 @@
       <form action="#" class="kereso">
         <div class="container row ">
           <div class="col-lg-3">
-            <label for="inev"></label>
-            <input type="text" id="inev" name="nev" placeholder="Név" class="form-control" pattern="[A-Z][a-z]{2,}">
+            <label for="cim"></label>
+            <input type="text" id="cim" name="cim" placeholder="Cím" class="form-control" pattern="[A-Z][a-z]{2,}">
           </div>
+
           <div class="col-lg-3">
-            <label for="ikor"></label>
-            <input type="text" id="ikor" name="kor" placeholder="pl: >12, =12, <12" class="form-control" pattern="[1-9][0-9]{2,}">
+            <label for="iro"></label>
+            <input type="text" id="iro" name="iro" placeholder="Író" class="form-control" pattern="[A-Z][a-z]{2,}">
           </div>
+
           <div class="col-lg-3">
-            <label for="ifajta"></label>
-            <input type="text" id="ifajta" name="fajta" placeholder="fajta" class="form-control">
+            <label for="mufaly"></label>
+            <input type="text" id="mufaly" name="mufaly" placeholder="Műfaly" class="form-control" pattern="[a-z]{2,}">
           </div>
+
+          <div class="col-lg-3">
+            <label for="kiadDate"></label>
+            <input type="text" id="kiadDate" name="kiadDate" placeholder="Kiadás dátuma Pl.: 2003"
+              class="form-control" pattern="[1-9][0-9]{2,}">
+          </div>
+
           <div class="col-lg-3">
             <label for="keresGomb"></label>
             <input type="submit" id="keresGomb" class="form-control btn btn-primary" value="Kereses">
@@ -63,22 +72,27 @@
       </form>
 
 
-<!-- <img src="kepek/skulduggery_1.png" alt=""> -->
+      <!-- <img src="kepek/skulduggery_1.png" alt=""> -->
       <div class="ujElemLetrehoz container mt-3 elrejt">
         <form action="#" class="ujArray">
           <div class="mb-3 mt-3">
-            <label for="nev">nev:</label>
-            <input type="nev" class="form-control" id="nev" placeholder="nev" name="nev" required>
+            <label for="cim">Cím:</label>
+            <input type="text" class="form-control" id="cim" name="cim" placeholder="Pl.: Ábel a rengetegben" required>
           </div>
 
           <div class="mb-3 mt-3">
-            <label for="kor">kor:</label>
-            <input type="text" class="form-control" id="kor" placeholder="kor" name="kor" required>
+            <label for="iro">Író:</label>
+            <input type="text" class="form-control" id="iro" name="iro" placeholder="Pl.: Rick Riordan" required>
           </div>
 
           <div class="mb-3 mt-3">
-            <label for="fajta">fajta:</label>
-            <input type="text" class="form-control" id="fajta" placeholder="fajta" name="fajta" required>
+            <label for="iro">Műfaly:</label>
+            <input type="text" class="form-control" id="mufaly" name="mufaly" placeholder="Pl.: sci-fi" required>
+          </div>
+
+          <div class="mb-3 mt-3">
+            <label for="kor">Kiadás dátuma:</label>
+            <input type="text" class="form-control" id="kiadDate" name="kiadDate" placeholder="Pl.: 2004" required>
           </div>
 
           <button type="submit" class="btn btn-primary submit">Beküldt</button>
