modal az oldal tetején jelenik meg

--- a/publikOldal.html
+++ b/publikOldal.html
@@ -37,9 +37,7 @@
       </div>
     </nav>
 
-    <article>
-    </article>
-    <aside>
+    <div>
       <!-- The Modal -->
       <div class="modal fade modal-dialog modal-dialog-centered" id="myModal">
         <div class="modal-dialog modal-lg">
@@ -48,7 +46,11 @@
           </div>
         </div>
       </div>
-    </aside>
+    </div>
+    <article>
+      
+    </article>
+    
 
     <footer>Dreilinger Vanessza Maja</footer>
   </main>
