--- a/publikOldal.html
+++ b/publikOldal.html
@@ -39,7 +39,7 @@
 
     <div>
       <!-- The Modal -->
-      <div class="modal fade modal-dialog modal-dialog-centered" id="myModal">
+      <div class="modal " id="myModal">
         <div class="modal-dialog modal-lg">
           <div class="modal-content">
 
